# CyclicFinetune

./: .gitignore  README_x.md  chat.py  check_loading.py  check_vram.py  evaluate.py  generate_fake_data.py  prepare_data.py  pyproject.toml  question_formats.json  reward.py  scratch.py  tools.py  train_rl.py  train_sft.py
configs/: deepspeed_z2.json  deepspeed_z3.json
