[project]
name = "geo-finetune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.8.4",
    "deepspeed>=0.18.9",
    "gradio>=6.13.0",
    "pandas>=3.0.2",
    "peft>=0.18.1",
    "polars>=1.39.3",
    "pyarrow>=23.0.1",
    "torch>=2.11.0",
    "transformers>=5.5.3",
    "trl>=1.0.0",
    "wandb>=0.25.1",
]
